--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,8 @@
 	</dependencies>
 
 	<build>
+
+		<finalName>app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
